<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_game"
            android:icon="@drawable/ic_videogame_asset_white_24dp"
            android:title="@string/new_game"/>
        <item
            android:id="@+id/nav_points"
            android:icon="@drawable/ic_star_white_24dp"
            android:title="@string/match_history"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/friends_string"/>
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/make_contact"/>
        </menu>
    </item>

</menu>
