<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/blackTransperent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/twiceMargin"
    >

    <TextView
        style="@style/CustomTextView"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/headTitleTextView"
        android:textStyle="bold"
        android:text="@string/sign_in"/>

    <EditText
        android:id="@+id/sign_in_email"
        style="@style/CustomEditView"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:hint="@string/email"/>


    <EditText
        android:id="@+id/sign_in_password"
        style="@style/CustomEditView"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        android:maxLength="20"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/sign_in_button"
        style="@style/CustomButtonView"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:maxWidth="400dp"
        android:text="@string/enter"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:maxWidth="400dp">
    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/sign_in_new_user"
        style="@style/CustomTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sign_up_now"
        android:padding="@dimen/short_padding"/>
</LinearLayout>